--- a/webdev/webdevqueueless/webdev/student-landing-page/quenumber.css
+++ b/webdev/webdevqueueless/webdev/student-landing-page/quenumber.css
@@ -14,18 +14,18 @@ body{
 nav {
     position: sticky;
     top: 0;
-
     background-color: #990000;
-     color:rgb(255, 255, 255);
-    padding: 15px 40px;
+    color:rgb(255, 255, 255);
+    padding: 25px 40px;
     display: flex; 
     align-items: center;
     justify-content: space-between;
+    z-index: 999;
 }
 
 .nav-logo-img {
-    max-height: 45px;
-    width: auto;
+    max-height: 95px;
+    width: 150px;
     filter: brightness(0) invert(1);
     transition: transform 0.2s ease;
 }
@@ -36,18 +36,18 @@ nav {
 
 .nav-links {
      list-style: none;
-      display: flex;
+     display: flex;
      gap: 20px;
 
  }
 
 .nav-links li a {
     color: rgba(255,255,255);
-     text-decoration: none;
-    font-size: 14px;
-     font-weight: 500;
-     padding: 6px 12px;
-     border-radius: 6px;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 6px 12px;
+    border-radius: 6px;
     transition: background 0.2s, color 0.2s;
 }
 
@@ -66,20 +66,19 @@ nav {
 
 .logout {
     background: rgba(255, 255,  255, 0.15);
+    color: rgb(255, 255, 255);
     padding: 6px 14px; 
     border: none;
     border-radius: 6px;
-    cursor: pointer;
-    color: white; 
-    font-size: 13px;
-     font-weight: 600;
-     
-     
+    font-size: 18px;
+    font-weight: 500;
+    padding: 6px 12px;
+    transition: background 0.2s, color 0.2s;;
 }
 
 .logout:hover {
     background-color: rgb(255, 255, 255);
-   
+    color: #960000;
 }
 
 
